# MedImgParser

./: .gitignore  CMakeLists.txt  MedImg2Raw.cpp  MedImgParser.cpp  MedImgParser.h  README.md  test.cpp  utilities.cpp  utilities.h
DICOMParser/src/: DICOMAppHelper.cxx  DICOMCMakeConfig.h
NrrdIO/: privateNrrd.h
nifti/: config.h  nifti1_i  nifti1_io  nifti2_io.c  nifti2_io.h
zlib/: zlib.h
